# menu-voting

./: Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  setup.cfg
app/: __init__.py  config.py  db.py  dependencies.py  server.py
app/endpoints/: restaurant.py  user.py  vote.py
app/factory/: restaurant.py  user.py
app/models/: restaurant.py  user.py  vote.py
app/schemas/: restaurant.py  user.py  vote.py
migrations/: env.py
migrations/versions/: ff25a230dd76_init.py
tests/: conftest.py  test_restaurant.py  test_user.py  test_vote.py
